--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </figure>
       </section>
       <section class="intro">
+        <div class="intro__box">
         <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
         <p class="intro__text">
           По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать,
@@ -83,6 +84,7 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="photo-grid" aria-label="Фотографии России">
         <ul class="photo-grid__list">
