--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h2 class="lead__subtitle">
+        <p class="lead__subtitle">
           Настоящая страна не в выпусках новостей, а здесь.
-        </h2>
+        </p>
         <figure class="lead__figure">
           <img
             src="./images/polka.jpeg"
@@ -175,7 +175,7 @@
         </ul>
       </section>
       <section class="place">
-        <div class="place__cell">
+        <article class="place__cell">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <h3 class="place__url">URL</h3>
@@ -202,8 +202,8 @@
               природы и запах стального, прохладного моря.
             </p>
           </div>
-        </div>
-        <div class="place__cell">
+        </article>
+        <article class="place__cell">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <h3 class="place__url">URL</h3>
@@ -234,8 +234,8 @@
               в Мурманск.
             </p>
           </div>
-        </div>
-        <div class="place__cell">
+        </article>
+        <article class="place__cell">
           <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <h3 class="place__url">URL</h3>
@@ -266,8 +266,8 @@
               Алтайского края.
             </p>
           </div>
-        </div>
-        <div class="place__cell">
+        </article>
+        <article class="place__cell">
           <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <h3 class="place__url">URL</h3>
@@ -294,8 +294,8 @@
               «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
             </p>
           </div>
-        </div>
-        <div class="place__cell">
+        </article>
+        <article class="place__cell">
           <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <h3 class="place__url">URL</h3>
@@ -321,7 +321,7 @@
               медвежьими когтями. Чтобы все знали, кто тут хозяин.
             </p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="cover">
         <a
